@@ -14,7 +14,7 @@ name="GENERATOR" />
 </head></p>
 <h1>SNMP Trap Translator Convert MIB v1.5beta1</h1>
 <p><strong>(</strong><a href="http://www.snmptt.org"><strong>SNMPTTCONVERTMIB</strong></a><strong>)</strong><br />
-This file was last updated on:  March 5th, 2021</p>
+This file was last updated on:  October 2nd, 2021</p>
 <h1>License</h1>
 <p>Copyright 2002-2021 Alex Burger<br />
 alex_b@users.sourceforge.net<br />
@@ -123,7 +123,7 @@ EDESC
 
 Result: EXEC qpage -f TRAP notifygroup1 "A linkUp trap signifies that the SNMP entity, acting in an $*"
 </code></pre>
-<p>Same as above, but read the EXEC line from the file exec-commands.txt.  Multiple commands can be added to the file to generate multiple EXEC lines per trap.</p>
+<p>Same as above, but read the EXEC line(s) from the file exec-commands.txt.  Multiple commands can be added to the file to generate multiple EXEC lines per trap.</p>
 <pre><code>snmpttconvertmib --in=/usr/share/snmp/mibs/CPQHOST.mib --out=/etc/snmp/snmptt.conf.compaq --exec_file exec-commands.txt
 </code></pre>
 <p>Append an EXEC command but don't add the generated FORMAT line.  The variable substitution <strong>$Fz</strong> is used in the --exec line which will cause SNMPTT to replace it with the generated FORMAT line when a trap arrives.</p>
@@ -131,6 +131,14 @@ Result: EXEC qpage -f TRAP notifygroup1 "A linkUp trap signifies that the SNMP e
 </code></pre>
 <p>Same as above but instead of SNMPTT having to replace <strong>$Fz</strong> with the FORMAT line, snmpttconvertmib will do the substitution:</p>
 <pre><code>snmpttconvertmib --in=/usr/share/snmp/mibs/CPQHOST.mib --out=/etc/snmp/snmptt.conf.compaq --exec_mode=2 --exec '/usr/bin/myscript { $Fz }'
+</code></pre>
+<p>Append a PREEXEC command.</p>
+<pre><code>snmpttconvertmib --in=/usr/share/snmp/mibs/CPQHOST.mib --out=/etc/snmp/snmptt.conf.compaq --preexec '/usr/local/bin/snmpget -v 1 -Ovq -c public $aA ifDescr.$1'
+
+Result: PREEXEC /usr/local/bin/snmpget -v 1 -Ovq -c public $aA ifDescr.$1
+</code></pre>
+<p>Same as above, but read the PREEXEC line(s) from the file preexec-commands.txt.  Multiple commands can be added to the file to generate multiple PREEXEC lines per trap.</p>
+<pre><code>snmpttconvertmib --in=/usr/share/snmp/mibs/CPQHOST.mib --out=/etc/snmp/snmptt.conf.compaq --preexec_file preexec-commands.txt
 </code></pre>
 <p>To convert all the CPQ* files in the current folder, you can use:</p>
 <p>Unix / Linux:</p>
