@@ -4,6 +4,8 @@ Oct 2nd, 2021: Alex Burger <alex_b@users.sourceforge.net>
   UDP: [x.x.x.x]:xxxx->[x.x.x.x]:xxxx.  Thanks to Danilo Godec for the fix.
   (issue #3).
 - Fixed a bug with IPv6 address handling for NODES in snmptt.conf.
+- Add --preexec and --preexec_file options to snmpttconvertmib.  Feature
+  request from issue #4 by Andrew Shark.
 
 July 19th, 2021: Alex Burger <alex_b@users.sourceforge.net>
 - Fixed a bug that prevented snmptt from starting when debug mode was disabled
